--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -1,1 +1,21 @@
+body {
+  margin-top: 7em;
+}
 
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 2px solid black;
+  padding: 1rem;
+}
+
+.app-title {
+  text-decoration: none;
+  font-size: 3rem;
+  color: black;
+}
