Add content to details page, make App responsive to smaller screens.

--- a/src/Components/Article.css
+++ b/src/Components/Article.css
@@ -7,5 +7,14 @@
 }
 
 .article-image {
-  width: 500px;
+  width: 45%;
+}
+
+@media screen and (max-width: 800px) {
+  .article-container {
+    flex-direction: column;
+  }
+  .article-image {
+    width: 100%;
+  }
 }
