--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -5,13 +5,20 @@ body {
 header {
   position: fixed;
   top: 0;
-  width: 100%;
+  left: 0;
+  right: 0;
   background-color: white;
   display: flex;
   justify-content: center;
-  align-items: center;
   border-bottom: 2px solid black;
   padding: 1rem;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .app-title {
