--- a/src/Components/Article.css
+++ b/src/Components/Article.css
@@ -1,8 +1,9 @@
 .article-container {
   text-decoration: none;
   color: black;
+  border-bottom: 2px solid black;
   display: flex;
-  margin: 20px;
+  padding: 20px;
   gap: 20px;
 }
 
